Formatando vagas para padrão. Atualizando documentação Swagger
